fix cut-off state label and overflown merge source line

--- a/web_src/css/repo.css
+++ b/web_src/css/repo.css
@@ -667,6 +667,7 @@ td .commit-summary {
   font-size: 14px !important;
   padding: 7px 10px !important;
   border-radius: var(--border-radius-medium) !important;
+  flex-shrink: 0;
 }
 
 .issue-state-label .svg {
